# pgr-cli-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pgr_manager/: cli.py  config.py  core.py
